# powerplant-coding-challenge

./: README.md  pyproject.toml  run.sh
src/adapters/: api.py
src/application/services/: calculate_powerplant_use.py
src/domain/: powerplant.py
test/application/: test_calculate_powerplan_use.py
